fix: [PAGOPA-3210] Collection random shuffle